--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <ul class="mt40 info list-unstyled">
                     <li><span>Birthdate</span> : 08 dec, 2004</li>
                     <li><span>Email</span> : me@umarmuzzafar.com</li>
-                    <li><span>Phone</span> : + (91) 9103312268</li>
+                    <li><span>Phone</span> : + (91) ------</li>
                     <li><span>Address</span> :  190006, Umer Colony A, Lal Bazer.</li>
                 </ul>
                 <ul class="social-icons pt-3">
@@ -730,7 +730,7 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+ (91) 9103312268</span></h6>
+                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+ (91) -----</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
